--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.5",
-    "@angular/common": "^4.2.5",
-    "@angular/compiler": "^4.2.5",
-    "@angular/core": "^4.2.5",
-    "@angular/forms": "^4.2.5",
-    "@angular/http": "^4.2.5",
-    "@angular/platform-browser": "^4.2.5",
-    "@angular/platform-browser-dynamic": "^4.2.5",
-    "@angular/router": "^4.2.5",
+    "@angular/animations": "^4.3.2",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/core": "^4.3.2",
+    "@angular/forms": "^4.3.2",
+    "@angular/http": "^4.3.2",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angular/router": "^4.3.2",
     "bootstrap": "^3.3.7",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "jquery": "^1.12.4",
+    "file-saver": "^1.3.3",
+    "xlsx": "^0.10.9",
     "ng2-datetime-picker": "^0.15.1",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.4.2",
@@ -35,10 +37,10 @@
     "@angular/compiler-cli": "^4.2.5",
     "@angular/language-service": "^4.2.5",
     "@types/jasmine": "~2.5.52",
-    "@types/node": "~6.0.60",
+    "@types/node": "~6.0.85",
     "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.3",
-    "jasmine-spec-reporter": "~4.1.0",
+    "jasmine-core": "~2.7.0",
+    "jasmine-spec-reporter": "~4.1.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
