--- a/package.json
+++ b/package.json
@@ -12,25 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.2",
-    "@angular/common": "^4.3.2",
-    "@angular/compiler": "^4.3.2",
-    "@angular/core": "^4.3.2",
-    "@angular/forms": "^4.3.2",
-    "@angular/http": "^4.3.2",
-    "@angular/platform-browser": "^4.3.2",
-    "@angular/platform-browser-dynamic": "^4.3.2",
-    "@angular/router": "^4.3.2",
+    "@angular/animations": "^4.3.4",
+    "@angular/common": "^4.3.4",
+    "@angular/compiler": "^4.3.4",
+    "@angular/core": "^4.3.4",
+    "@angular/forms": "^4.3.4",
+    "@angular/http": "^4.3.4",
+    "@angular/platform-browser": "^4.3.4",
+    "@angular/platform-browser-dynamic": "^4.3.4",
+    "@angular/router": "^4.3.4",
     "bootstrap": "^3.3.7",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.4.1",
-    "jquery": "^1.12.4",
+    "core-js": "^2.5.0",
     "file-saver": "^1.3.3",
-    "xlsx": "^0.10.9",
+    "hammerjs": "^2.0.8",
+    "jquery": "^1.12.4",
+    "jspdf": "^1.3.3",
     "ng2-datetime-picker": "^0.15.1",
+    "ng2-select": "^1.2.0",
     "ngx-bootstrap": "^1.7.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.12"
+    "rxjs": "^5.4.3",
+    "xlsx": "^0.10.9",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
     "@angular/cli": "~1.2.0",
@@ -40,7 +43,7 @@
     "@types/node": "~6.0.85",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.7.0",
-    "jasmine-spec-reporter": "~4.1.1",
+    "jasmine-spec-reporter": "^4.2.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
