--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "^4.3.5",
     "@angular/platform-browser-dynamic": "^4.3.5",
     "@angular/router": "^4.3.5",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "~3.3.7",
+    "font-awesome": "~4.7.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.0",
     "file-saver": "^1.3.3",
